Fixed Guillaume's hover text so that the position is not cut off

--- a/app/assets/stylesheets/hover_img_title.css
+++ b/app/assets/stylesheets/hover_img_title.css
@@ -1,17 +1,19 @@
 .officer img {
   border: none;
 }
+
 .officer .title {
   background-color: rgba(0, 0, 0, 0.5);
-  bottom: 40px;
+  bottom: 45px;
   color: #FFFFFF;
   font-size: 11px;
   padding: 3px;
   padding-left: 7px;
   position: relative;
   width: 90px;
-  height: 30px;
+  height: 35px;
 }
+
 .officer {
   width: 100px;
   padding-right: 25px;
